--- a/Codigo/Proyecto1/src/main/java/GUI/RegistrarCliente.form
+++ b/Codigo/Proyecto1/src/main/java/GUI/RegistrarCliente.form
@@ -242,6 +242,9 @@
           </Border>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="RegistrarActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="120" y="360" width="-1" height="20"/>
