--- a/Codigo/Proyecto1/src/main/java/GUI/InterfazCliente.form
+++ b/Codigo/Proyecto1/src/main/java/GUI/InterfazCliente.form
@@ -50,28 +50,21 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace max="32767" attributes="0"/>
-                  <Component id="PanelCuentas" min="-2" pref="524" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="ScrollBarCuentas" min="-2" pref="19" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
+                  <Component id="PanelCuentas" min="-2" pref="552" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="PanelCuentas" pref="340" max="32767" attributes="0"/>
-                      <Component id="ScrollBarCuentas" pref="340" max="32767" attributes="0"/>
-                  </Group>
+                  <Component id="PanelCuentas" pref="340" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JScrollBar" name="ScrollBarCuentas">
-        </Component>
         <Container class="javax.swing.JPanel" name="PanelCuentas">
           <Properties>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
@@ -82,15 +75,23 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="524" max="32767" attributes="0"/>
+                  <Group type="102" alignment="1" attributes="0">
+                      <EmptySpace pref="527" max="32767" attributes="0"/>
+                      <Component id="ScrollBarCuentas" min="-2" pref="19" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                  </Group>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                  <Component id="ScrollBarCuentas" alignment="1" pref="340" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
           </Layout>
+          <SubComponents>
+            <Component class="javax.swing.JScrollBar" name="ScrollBarCuentas">
+            </Component>
+          </SubComponents>
         </Container>
       </SubComponents>
     </Container>
