--- a/Codigo/Proyecto1/src/main/java/GUI/IniciarSesion.form
+++ b/Codigo/Proyecto1/src/main/java/GUI/IniciarSesion.form
@@ -75,7 +75,7 @@
         </Constraint>
       </Constraints>
     </Component>
-    <Component class="javax.swing.JTextField" name="nombre">
+    <Component class="javax.swing.JTextField" name="txtidentificacion">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="66" green="0" red="0" type="rgb"/>
