--- a/Codigo/Proyecto1/src/main/java/GUI/AgregarCuenta.form
+++ b/Codigo/Proyecto1/src/main/java/GUI/AgregarCuenta.form
@@ -69,6 +69,9 @@
           </Border>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="AgregarActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="130" y="370" width="-1" height="-1"/>
